<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_home"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="50dp"
                    android:id="@+id/bku"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:id="@+id/no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textColor="@color/colorPrimary"
                           android:text="@string/status"
                           android:id="@+id/status"
                           android:layout_gravity="right"
                           android:paddingEnd="10dp"/>
                       <View
                           android:layout_width="match_parent"
                           android:layout_height="1dp"
                           android:id="@+id/garis"
                           android:background="@color/colorPrimary"/>
                   </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Penggunaan"
                            android:id="@+id/namapenggunaan"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/penyedia"
                            android:id="@+id/detail"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rupiah"
                                android:id="@+id/rp"
                                android:layout_marginBottom="10dp"
                                android:textColor="@color/colorPrimary"
                                android:textSize="12sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:id="@+id/uangnya"
                                android:layout_marginBottom="10dp"
                                android:textColor="@color/colorPrimary"
                                android:textSize="12sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tanda"
                                android:id="@+id/tanda"
                                android:layout_marginBottom="10dp"
                                android:textColor="@color/colorPrimary"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>