<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ac.its.attendance.Activity.AturImeiActivity"
    android:background="@drawable/kosong">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:id="@+id/card_imei">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="10dp">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/imei_anda_adalah"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   android:textColor="@color/colorPrimary"
                   android:layout_gravity="center"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/imei_tidak_terbaca"
                   android:textSize="18sp"
                   android:layout_marginTop="10dp"
                   android:id="@+id/Imei"
                   android:textStyle="bold"
                   android:textColor="@color/colorPrimary"
                   android:layout_gravity="center"/>
           </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:id="@+id/btn_register"
                app:cardBackgroundColor="@color/colorPrimary">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Atur_imei"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:gravity="center|center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>