<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/kosong"
    tools:context="id.ac.its.attendance.Rule.Kepala.KepalaBagianActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Pilih_Rekening"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_pilih"
        android:layout_marginBottom="15dp"
        android:id="@+id/bendaharaunit"
        android:layout_marginStart="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/school"
                android:padding="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Dana_BOPDA"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="50dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_pilih"
        android:layout_marginBottom="15dp"
        android:id="@+id/bendaharabos"
        android:layout_marginStart="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/school"
                android:padding="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Dana_BOS"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="50dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>